--- a/styles/blocks/baner.css
+++ b/styles/blocks/baner.css
@@ -1,5 +1,6 @@
 .baner {
     background-color: #dbebf2;
+    background-image: url("/img/baner-desktop@1x.jpg");
     height: 389px;
     width: 320px;
 }
