--- a/styles/reset.css
+++ b/styles/reset.css
@@ -4,7 +4,12 @@ a {
     text-decoration: none;
 }
 
-li ol {
+ol li {
+    list-style: none;
+    text-align: inherit;
+}
+
+ul {
     list-style-type: none;
 }
 
