--- a/styles/blocks/baner.css
+++ b/styles/blocks/baner.css
@@ -4,3 +4,15 @@
     height: 389px;
     width: 320px;
 }
+
+.baner__text {
+    fill: #FFFFFF;
+}
+
+.baner__text--blue {
+    fill: #81B3D3;
+}
+
+.baner__text--brown {
+    fill: #766458;
+}
