--- a/styles/blocks/body.css
+++ b/styles/blocks/body.css
@@ -4,6 +4,8 @@ body {
 
     font-family: "PT Sans", "Arial", sans-serif;
     font-size: 14px;
+    font-weight: 400;
+    
     text-align: center;
     text-transform: uppercase;
     line-height: 21px;
