--- a/styles/reset.css
+++ b/styles/reset.css
@@ -42,28 +42,37 @@ h3 {
     margin-inline-end: inherit;
 }
 
-ol {
-    display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-}
-
-ul {
+h4 {
     display: inherit;
-    list-style-type: none;
+    font-weight: inherit;
+    font-size: inherit;
     margin-block-start: inherit;
     margin-block-end: inherit;
     margin-inline-start: inherit;
     margin-inline-end: inherit;
-    padding-inline-start: inherit;
+}
+
+ul,
+ol {
+    display: inherit;
+    list-style-type: none;
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
 }
 
 li {
     display: inherit;
     list-style: none;
     text-align: inherit;
+}
+
+p {
+    display: inherit;
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
