--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,10 +1,15 @@
+* {
+    box-sizing: border-box;
+}
+
 a {
-    color: #333;
+    color: #333333;
     cursor: pointer;
     text-decoration: none;
 }
 
-button {
+button,
+textarea {
     font-family: inherit;
     text-transform: inherit;
     background-color: inherit;
@@ -12,37 +17,7 @@ button {
     border: inherit;
 }
 
-h1 {
-    display: inherit;
-    font-weight: inherit;
-    font-size: inherit;
-    margin-block-start: inherit;
-    margin-block-end: inherit;
-    margin-inline-start: inherit;
-    margin-inline-end: inherit;
-}
-
-h2 {
-    display: inherit;
-    font-weight: inherit;
-    font-size: inherit;
-    margin-block-start: inherit;
-    margin-block-end: inherit;
-    margin-inline-start: inherit;
-    margin-inline-end: inherit;
-}
-
-h3 {
-    display: inherit;
-    font-weight: inherit;
-    font-size: inherit;
-    margin-block-start: inherit;
-    margin-block-end: inherit;
-    margin-inline-start: inherit;
-    margin-inline-end: inherit;
-}
-
-h4 {
+h1, h2, h3, h4 {
     display: inherit;
     font-weight: inherit;
     font-size: inherit;
@@ -56,11 +31,8 @@ ul,
 ol {
     display: inherit;
     list-style-type: none;
-    margin-block-start: 0px;
-    margin-block-end: 0px;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 
 li {
@@ -71,8 +43,5 @@ li {
 
 p {
     display: inherit;
-    margin-block-start: 0px;
-    margin-block-end: 0px;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+    margin: 0px;
 }
