--- a/styles/blocks/footer.css
+++ b/styles/blocks/footer.css
@@ -1,5 +1,10 @@
 .footer {
+    display: flex;
     background-color: #ffffff;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 32px;
 }
 
 .footer__hashtag {
