--- a/styles/blocks/menu-item.css
+++ b/styles/blocks/menu-item.css
@@ -1,3 +1,12 @@
-.menu-item {
+.menu-item__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     background-color: #81B3D2;
+
+    color: #ffffff;
+
+    height: 56px;
+    width: 100%;
 }
