baner was renamed to banner

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 @import "/styles/mixins/button.css";
 
 /* Blocks */
-@import "/styles/blocks/baner.css";
+@import "/styles/blocks/banner.css";
 @import "/styles/blocks/body.css";
 @import "/styles/blocks/developed-by-link.css";
 @import "/styles/blocks/developed-by.css";
