--- a/styles/blocks/banner.css
+++ b/styles/blocks/banner.css
@@ -1,24 +1,24 @@
-.baner {
+.banner {
     display: flex;
     justify-content: center;
     align-items: center;
 
     background-color: #dbebf2;
-    background-image: url("/img/baner-desktop@1x.jpg");
+    background-image: url("/img/banner-desktop@1x.jpg");
     background-position: center;
 
     height: 389px;
     width: 320px;
 }
 
-.baner__text {
+.banner__text {
     fill: #FFFFFF;
 }
 
-.baner__text--blue {
+.banner__text--blue {
     fill: #81B3D3;
 }
 
-.baner__text--brown {
+.banner__text--brown {
     fill: #766458;
 }
