image urls were adopted for GHP

--- a/styles/blocks/banner.css
+++ b/styles/blocks/banner.css
@@ -4,7 +4,7 @@
     align-items: center;
 
     background-color: #dbebf2;
-    background-image: url("img/banner-desktop@1x.jpg");
+    background-image: url("../../img/banner-desktop@1x.jpg");
     background-position: center;
 
     height: 389px;
