--- a/styles/blocks/menu-item.css
+++ b/styles/blocks/menu-item.css
@@ -10,3 +10,11 @@
     height: 56px;
     width: 100%;
 }
+
+.menu-item__text {
+    display: block;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: calc(100vw - 36px);
+}
