background-position for banner was fixed

--- a/styles/blocks/banner.css
+++ b/styles/blocks/banner.css
@@ -5,7 +5,7 @@
 
     background-color: #dbebf2;
     background-image: url("../../img/banner-desktop@1x.jpg");
-    background-position: center;
+    background-position: center top;
 
     height: 389px;
     width: 320px;
