--- a/styles/blocks/footer.css
+++ b/styles/blocks/footer.css
@@ -4,11 +4,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 32px;
+    padding: 38px 18px 23px 18px;
 }
 
 .footer__hashtag {
     font-size: 21px;
     font-weight: 700;
     line-height: 26px;
+    margin-bottom: 32px;
+}
+
+.social-networks__list {
+    margin-bottom: 40px;
 }
