--- a/styles/blocks/reason-subitem-card.css
+++ b/styles/blocks/reason-subitem-card.css
@@ -9,17 +9,22 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    gap: 16px;
     width: 230px;
+
+    margin-top: 6px;
 }
 
 .reason-subitem-card__header {
     font-size: 18px;
     font-weight: 700;
     line-height: 26px;
+
+    margin-bottom: 16px;
 }
 
 .reason-subitem-card__image {
     fill: #81B3D2;
     flex-shrink: 0;
+
+    margin-right: 12px;
 }
