Margins were added for reasons

--- a/styles/blocks/reason-card.css
+++ b/styles/blocks/reason-card.css
@@ -1,11 +1,27 @@
+.reason-card__main {
+    padding: 36px 20px;
+}
+
 .reason-card__main--blue {
     background-color: #81B3D2;
+    color: #ffffff;
+}
+
+.reason-card__main--gray {
+    background-color: #eeeeee;
+    border-bottom: 1px;
+    padding: 36px 24px;
 }
 
 .reason-card__header {
     font-size: 18px;
     font-weight: 700;
     line-height: 26px;
+    margin: 12px;
+}
+
+.reason-card__number {
+    margin: 16px;
 }
 
 .reason-card__image {
@@ -20,7 +36,7 @@
     background-image: url("../../img/photo-city@1x.jpg");
 }
 
-.reason-card__image--bridge{
+.reason-card__image--bridge {
     background-color: #e2b29b;
     background-image: url("../../img/photo-bridge@1x.jpg");
 }
