--- a/styles/blocks/banner.css
+++ b/styles/blocks/banner.css
@@ -2,11 +2,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 
     background-color: #dbebf2;
     background-image: url("../../img/banner-desktop@1x.jpg");
-    background-position: center top;
+    background-position: bottom left -320px;
 
+    height: 157px;
+    width: 320px;
+}
+
+.banner--main {
+    background-position: center top;
     height: 389px;
     width: 320px;
 }
@@ -15,6 +22,7 @@
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    top: 32%;
     fill: #FFFFFF;
 }
 
