--- a/styles/blocks/feedback.css
+++ b/styles/blocks/feedback.css
@@ -2,6 +2,8 @@
     font-size: 18px;
     font-weight: 700;
     line-height: 26px;
+    padding: 32px 20px 20px 20px;
+    margin-bottom: 28px;
 }
 
 .feedback__description {
