4th values in paddings were deleted

--- a/styles/blocks/interest.css
+++ b/styles/blocks/interest.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    padding: 38px 20px 48px 20px;
+    padding: 38px 20px 48px;
 }
 
 .interest__header {
