--- a/styles/blocks/footer.css
+++ b/styles/blocks/footer.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 38px 18px 23px 18px;
+    padding: 38px 20px 23px;
 }
 
 .footer__hashtag {
