--- a/styles/blocks/menu-item.css
+++ b/styles/blocks/menu-item.css
@@ -16,5 +16,5 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-    max-width: calc(100vw - 36px);
+    max-width: 100vw;
 }
