--- a/styles/blocks/feedback.css
+++ b/styles/blocks/feedback.css
@@ -1,8 +1,11 @@
+.feedback {
+    padding: 32px 20px 20px;    
+}
+
 .feedback__header {
     font-size: 18px;
     font-weight: 700;
     line-height: 26px;
-    padding: 32px 20px 20px;
     margin-bottom: 28px;
 }
 
