--- a/styles/reset.css
+++ b/styles/reset.css
@@ -45,3 +45,15 @@ p {
     display: inherit;
     margin: 0px;
 }
+
+input[type="radio"i] {
+    accent-color: #000000;
+}
+
+input,
+textarea {
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+    font-family: inherit;
+}
