visually-hidden class was created

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 /* Mixins */
 @import "styles/mixins/button.css";
 @import "styles/mixins/input.css";
+@import "styles/mixins/visually-hidden.css";
 
 /* Blocks */
 @import "styles/blocks/banner.css";
