form-item__radio style was created

--- a/styles/blocks/form-item.css
+++ b/styles/blocks/form-item.css
@@ -1,3 +1,18 @@
 .form-item:not(:last-child) {
     margin-bottom: 20px;
 } 
+
+.form-item__radio {
+    width: 56px;
+    height: 56px;
+    flex: 0 0 auto;
+    margin-right: 22px;
+
+    border-radius: 50%;
+    border: 28px solid #f2f2f2;
+    background-color: #333333;
+}
+
+.form-item__input:checked+.form-item__radio {
+    border-width: 18px;
+}
