Styled form-checkbox was created

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 @import "styles/blocks/feedback.css";
 @import "styles/blocks/footer.css";
 @import "styles/blocks/form.css";
+@import "styles/blocks/form-checkbox.css";
 @import "styles/blocks/form-item.css";
 @import "styles/blocks/form-label.css";
 @import "styles/blocks/header.css";
