--- a/styles/blocks/form.css
+++ b/styles/blocks/form.css
@@ -3,6 +3,16 @@
     padding: 0px 20px 24px;
 }
 
+.form__button-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form__button {
+    margin-bottom: 16px;
+}
+
 .form__legend {
     padding-top: 20px;
     margin-bottom: 20px;
