--- a/styles/blocks/menu-item.css
+++ b/styles/blocks/menu-item.css
@@ -1,3 +1,17 @@
+.menu-item {
+    position: relative;
+}
+
+.menu-item:not(:last-child)::after {
+    content: "";
+    background-color: #D6D6D6;
+    bottom: 0;
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    height: 1px;
+}
+
 .menu-item__link {
     display: flex;
     align-items: center;
