--- a/styles/blocks/menu.css
+++ b/styles/blocks/menu.css
@@ -1,10 +1,77 @@
 .menu {
+    position: relative;
+    height: 56px;
+
     font-size: 18px;
     font-weight: 700;
     line-height: 18px;
 }
 
 .menu__list {
-    display: flex;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: #81b3d2;
+    transform: translateY(-100%);
     flex-direction: column;
+}
+
+.menu__list--showed {
+    transform: translateY(0%);
+}
+
+.menu__toggle-button {
+    position: absolute;
+    font-size: 0;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    border: 0;
+
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.menu__button-line {
+    position: absolute;
+    display: block;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: #81B3D2;
+}
+
+.menu__button-line--first {
+    top: 0;
+}
+
+.menu__button-line--second {
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.menu__button-line--third {
+    bottom: 0;
+}
+
+/* cross */
+
+.menu__toggle-button--crossed .menu__button-line {
+    background-color: #ffffff;
+}
+
+.menu__toggle-button--crossed .menu__button-line--first {
+    top: 50%;
+    transform: translateY(-50%) rotate(45deg) scaleX(1.16);
+}
+
+.menu__toggle-button--crossed .menu__button-line--second {
+    display: none;
+}
+
+.menu__toggle-button--crossed .menu__button-line--third {
+    top: 50%;
+    transform: translateY(-50%) rotate(-45deg) scaleX(1.16);
 }
