--- a/styles/blocks/body.css
+++ b/styles/blocks/body.css
@@ -1,5 +1,6 @@
 body {
-    width: 320px;
+    min-width: 320px;
+    max-width: 1200px;
     margin: 0 auto;
 
     font-family: "PT Sans", "Arial", sans-serif;
