--- a/styles/blocks/logo.css
+++ b/styles/blocks/logo.css
@@ -3,3 +3,13 @@
     left: 50%;
     transform: translateX(-50%);
 }
+
+.logo__image-border {
+    visibility: hidden;
+}
+
+@media (min-width: 1200px) {
+    .logo__image-border {
+        visibility: visible;
+    }
+}
