--- a/styles/blocks/reason-subitem-card.css
+++ b/styles/blocks/reason-subitem-card.css
@@ -31,4 +31,37 @@
 .reason-subitem-card__image {
     fill: #81B3D2;
     flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+}
+
+@media (min-width: 768px) {
+    .reason-subitem-card {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        justify-content: inherit;
+    }
+
+    .reason-subitem-card__wrapper {
+        height: 76px;
+        width: 76px;
+    }
+
+    .reason-subitem-card__header {
+        font-size: 21px;
+        margin-bottom: 23px;
+    }
+
+    .reason-subitem-card__content {
+        align-items: center;
+
+        margin-top: 0;
+    }
+    
+    .reason-subitem-card__wrapper {
+        margin-right: 0;
+        margin-bottom: 28px;
+    }
+
 }
