--- a/styles/blocks/reason.css
+++ b/styles/blocks/reason.css
@@ -3,7 +3,6 @@
 }
 
 .reason__wrapper {
-    padding-top: 32px;
     padding: 32px 20px 14px;
 }
 
@@ -11,4 +10,12 @@
     font-size: 18px;
     font-weight: 700;
     margin-bottom: 28px;
+}
+
+@media (min-width: 768px) {
+    .reason__list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 }
