--- a/styles/blocks/menu-item.css
+++ b/styles/blocks/menu-item.css
@@ -17,8 +17,6 @@
     align-items: center;
     justify-content: center;
 
-    background-color: #81B3D2;
-
     color: #ffffff;
 
     height: 56px;
@@ -31,4 +29,23 @@
     text-overflow: ellipsis;
     overflow: hidden;
     max-width: 100vw;
+}
+
+@media (min-width: 768px) {
+    .menu-item {
+        width: 20%;
+        margin: 0;
+    }
+
+    .menu-item:not(:last-child)::after {
+        display: none;
+    }
+
+    .menu-item:nth-child(2) {
+        margin-right: auto;
+    }
+
+    .menu-item__link {
+        color: #000000;
+    }
 }
