--- a/styles/blocks/banner.css
+++ b/styles/blocks/banner.css
@@ -8,8 +8,6 @@
     background-image: url("../../img/banner-desktop@1x.jpg");
     background-position: bottom left -320px;
 
-    height: 158px;
-
     overflow: hidden;
 }
 
@@ -23,6 +21,9 @@
     left: 50%;
     transform: translateX(-50%);
     top: 32%;
+
+    width: 280px;
+
     fill: #FFFFFF;
 }
 
@@ -41,4 +42,15 @@
     transform: translateX(-50%);
 
     fill: #FFFFFF;
+}
+
+@media (min-width: 768px) {
+    .banner {
+        height: 518px;
+    }
+
+    .banner__text {
+        top: 15%;
+        width: 460px;
+    }
 }
