--- a/styles/blocks/reason-card.css
+++ b/styles/blocks/reason-card.css
@@ -49,12 +49,21 @@
     }
 
     .reason-card__main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         height: 256px;
         padding: 40px 32px 0;
     }
 
+    .reason-card__main--gray {
+        background-color: #eeeeee;
+        padding: 40px 40px 0;
+    }
+
     .reason-card__header {
         font-size: 21px;
+        width: 150px;
     }
 
     .reason-card__wrapper {
