--- a/styles/blocks/feedback.css
+++ b/styles/blocks/feedback.css
@@ -1,4 +1,4 @@
-.feedback {
+.feedback__wrapper {
     padding: 32px 20px 20px;    
 }
 
@@ -10,5 +10,23 @@
 }
 
 .feedback__description {
+    font-size: 14px;
     line-height: 24px;
+}
+
+@media (min-width: 768px) {
+    .feedback {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .feedback__wrapper {
+        padding: 65px 0 84px;
+        width: 436px;
+    }
+
+    .feedback__header {
+        font-size: 30px;
+    }    
 }
