Styles for form in form.html were added

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 @import "styles/blocks/form-checkbox.css";
 @import "styles/blocks/form-item.css";
 @import "styles/blocks/form-label.css";
+@import "styles/blocks/form-list.css";
 @import "styles/blocks/header.css";
 @import "styles/blocks/interest.css";
 @import "styles/blocks/logo.css";
