--- a/styles/blocks/form.css
+++ b/styles/blocks/form.css
@@ -1,9 +1,15 @@
+.form {
+    position: relative;
+}
+
 .form__fieldset {
     position: relative;
     padding: 0px 20px 24px;
 }
 
 .form__button-wrapper {
+    flex-basis: 100%;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,7 +24,9 @@
     margin-bottom: 20px;
     font-size: 18px;
     font-weight: 700;
+    line-height: 26px;
     color: #000000;
+    max-width: 310px;
 }
 
 .form__legend::before {
@@ -29,4 +37,74 @@
     left: 0px;
     right: 0px;
     height: 1px;
-} 
+}
+
+@media (min-width: 768px) {
+    .form {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+
+        padding: 0 60px;
+    }
+
+    .form__button-wrapper {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .form__fieldset {
+        padding-bottom: 58px;
+    }
+
+    .form__fieldset--full {
+        flex-basis: 100%;
+    }
+
+    .form__fieldset--full::before {
+        content: "";
+        background-color: #e5e5e5;
+        top: -14%;
+        position: absolute;
+        left: 60px;
+        width: 124px;
+        height: 1px;
+    }
+
+    .form__fieldset--full::after {
+        content: "";
+        background-color: #e5e5e5;
+        top: -12%;
+        position: absolute;
+        right: 60px;
+        width: 124px;
+        height: 1px;
+    }
+
+    .form__fieldset--short {
+        flex-basis: 50%;
+        padding-bottom: 74px;
+    }
+
+    .form__fieldset--impression {
+        order: -1;
+    }
+
+    .form__fieldset:first-child {
+        border-left: 1px solid #e5e5e5;
+    }
+
+    .form__legend {
+        font-size: 21px;
+    }
+
+    .form__legend--short {
+        margin-bottom: 56px;
+    }
+
+    .form__legend::before {
+        display: none;
+    }
+}
