--- a/styles/mixins/input.css
+++ b/styles/mixins/input.css
@@ -17,7 +17,7 @@
 
 .input__textarea {
     height: 160px;
-    width: 280px;
+    width: 100%;
     padding: 18px 22px 14px;
     background-color: #f2f2f2;
     resize: vertical;
