--- a/styles/blocks/menu-item.css
+++ b/styles/blocks/menu-item.css
@@ -31,6 +31,18 @@
     max-width: 100vw;
 }
 
+.menu-item__link:active {
+    background-color: #5496BD;
+}
+
+.menu-item__link--current {
+    background-color: #5496BD;
+}
+
+.menu-item__text:active {
+    opacity: 0.3;
+}
+
 @media (min-width: 768px) {
     .menu-item {
         width: 20%;
@@ -47,5 +59,20 @@
 
     .menu-item__link {
         color: #000000;
+    }
+
+    .menu-item__link--current {
+        color: #766357;
+        background-color: transparent;
+    }
+
+    .menu-item__link:active {
+        background-color: transparent;
+    }
+}
+
+@media (min-width: 1200px) {
+    .menu-item__link:hover {
+        color: #81B3D2;
     }
 }
