--- a/styles/mixins/input.css
+++ b/styles/mixins/input.css
@@ -32,3 +32,19 @@
     line-height: 26px;
     font-size: 18px;
 }
+
+.input__text:focus {
+    border: 4px solid #E5E5E5;
+    background-color: #FFFFFF;
+}
+
+.input__textarea:focus {
+    border: 4px solid #E5E5E5;
+    background-color: #FFFFFF;
+}
+
+@media (min-width: 1200px) {
+    .input__textarea:hover {
+        background: #E5E5E5;
+    }
+}
