--- a/styles/blocks/form-list.css
+++ b/styles/blocks/form-list.css
@@ -7,10 +7,9 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        padding: 0 120px;
     }
 
-    .form-list__item--impression {
+    .form-list__item--attractions {
         flex-basis: 50%;
         margin-bottom: 32px;
     }
@@ -30,5 +29,9 @@
     .form-list__item--contacts:not(:last-child) {
         flex-basis: 50%;
         margin: 0;
+    }
+
+    .form-list__item--attractions {
+        flex-basis: 25%;
     }
 }
