--- a/styles/blocks/social-networks-item.css
+++ b/styles/blocks/social-networks-item.css
@@ -12,8 +12,12 @@
     fill: #FFFFFF;
 }
 
+.social-networks-item__link:hover {
+    background-color: #669EC0;
+}
+
 .social-networks-item__link:active {
-    background: #5496BD;
+    background-color: #5496BD;
 }
 
 .social-networks-item__link:active .social-networks-item__icon {
